--- a/app/views/comments.html
+++ b/app/views/comments.html
@@ -1,15 +1,15 @@
 <form ng-submit="submitComment()">
-  <input type="text" ng-model="commentor" name="commentor" placeholder="Type your name">
-  <input type="textarea" ng-model="commentText" name="commentText" placeholder="Your comment">
+  <input type="text" ng-model="formData.commentor" name="commentor" placeholder="Your name">
+  <input type="textarea" ng-model="formData.text" name="commentText" placeholder="Your comment">
   <button type="submit">Post Comment</button>
 </form>
 
-<div ng-repeat="comment in comments | orderBy:'-popularity'">
+<div ng-repeat="comment in comments | orderBy:'-dateTime'">
   <p>{{comment.text}}</p>
   Upvotes: {{comment.upvotes}}
   Downvotes: {{comment.downvotes}}
-  <button ng-click="upvoteComment(comment._id)">Upvote</button>
-  <button ng-click="downvoteComment(comment._id)">Downvote</button>
+  <button ng-click="commentAction(comment._id, 'upvote')">Upvote</button>
+  <button ng-click="commentAction(comment._id, 'downvote')">Downvote</button>
 </div>
 
 <p>{{errorMessage}}</p>
