--- a/app/views/comments.html
+++ b/app/views/comments.html
@@ -1,15 +1,20 @@
-<form ng-submit="submitComment()">
-  <input type="text" ng-model="formData.commentor" name="commentor" placeholder="Your name">
-  <input type="textarea" ng-model="formData.text" name="commentText" placeholder="Your comment">
-  <button type="submit">Post Comment</button>
-</form>
-
-<div ng-repeat="comment in comments | orderBy:'-dateTime'">
-  <p>{{comment.text}}</p>
-  Upvotes: {{comment.upvotes}}
-  Downvotes: {{comment.downvotes}}
-  <button ng-click="commentAction(comment._id, 'upvote')">Upvote</button>
-  <button ng-click="commentAction(comment._id, 'downvote')">Downvote</button>
+<div class="comments-container">
+  <h3>Comments</h3>
+  <form ng-submit="submitComment()">
+    <textarea class="comment-input" type="textarea" ng-model="formData.text" name="commentText" placeholder="Start typing your comment"></textarea>
+    <input class="comment-user" type="text" ng-model="formData.commentor" name="commentor" placeholder="Your name">
+    <button type="submit" class="comment-button">Post Comment</button>
+    <p>{{errorMessage}}</p>
+  </form>
 </div>
 
-<p>{{errorMessage}}</p>
+<div class="comment-box" ng-repeat="comment in comments | orderBy:'-dateTime'">
+  <div>
+    <h5>Posted by {{comment.commentor}}</h5>
+    <p>{{comment.text}}</p>
+  </div>
+  <div>
+    <button class="comment-button" ng-click="commentAction(comment._id, 'upvote')">Upvote ({{comment.upvotes}})</button>
+    <button class="comment-button" ng-click="commentAction(comment._id, 'downvote')">Downvote ({{comment.downvotes}})</button>
+  </div>
+</div>
